# mobile_control

./: README.md
mobile_control/: CMakeLists.txt
mobile_control/include/mobile_control/: pd_control.hpp  pd_control_linear.hpp  pd_control_odom_feedback.hpp  pd_control_trans1.hpp  wheel_odometry.hpp
mobile_control/src/: pd_control_linear.cpp  pd_control_odom.cpp  wheel_odom.cpp
